--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,14 @@
-div {
-  display: flex;
-  justify-content: space-between;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+#mainNav {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-family: "Nunito", sans-serif;
+}
+#mainNav .navbar-brand {
+  font-size: 32px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #5FD292;
 }
