--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 #mainNav {
@@ -6,9 +6,51 @@
   padding-bottom: 1rem;
   font-family: "Nunito", sans-serif;
 }
+
+.nav-link {
+  color: #5FD292;
+}
+
 #mainNav .navbar-brand {
-  font-size: 32px;
+  font-size: 22px;
   font-weight: 900;
   text-transform: uppercase;
   color: #5FD292;
+}
+
+#header {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-family: "Nunito", sans-serif;
+  text-align: center;
+  color: #263238;
+}
+
+h1 {
+  font-weight: 800;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 20px;
+}
+
+#filter {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-family: "Nunito", sans-serif;
+  text-align: center;
+  color: #263238;
+}
+
+#footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  font-family: "Open Sans", sans-serif;
+  background-color: #5FD292;
+  color: white;
 }
