--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,11 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-family: "Nunito", sans-serif;
+  background-color: white;
 }
 
 .nav-link {
-  color: #5FD292;
+  color: #263238;
 }
 
 #mainNav .navbar-brand {
@@ -35,22 +36,27 @@ h2 {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 24px;
 }
 
 #filter {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   font-family: "Nunito", sans-serif;
+  font-size: 18px;
   text-align: center;
   color: #263238;
 }
 
+.nav-pills .nav-link.active { background-color: #FBE6F0; color: #F26BAA; }
+.nav-link:hover { color: #F26BAA; }
+
 #footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
   font-family: "Open Sans", sans-serif;
   background-color: #5FD292;
   color: white;
+}
+
+.bi:hover {
+  color: #eee;
 }
