--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,13 @@
   color: #263238;
 }
 
+#about {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-family: "Nunito", sans-serif;
+  color: #263238;
+}
+
 h1 {
   font-weight: 800;
 }
@@ -39,15 +46,85 @@ h3 {
   font-size: 24px;
 }
 
+p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+}
+
 #filter {
   font-family: "Nunito", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   text-align: center;
   color: #263238;
 }
 
 .nav-pills .nav-link.active { background-color: #FBE6F0; color: #F26BAA; }
 .nav-link:hover { color: #F26BAA; }
+
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+
+#image-preview {
+  width: 420px;
+  height: 270px;
+}
+
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  background: #F12B81;
+}
+
+.hovereffect .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  padding: 50px 20px;
+}
+
+.hovereffect img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: calc(100% + 20px);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px,0,0);
+  transform: translate3d(-10px,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.hovereffect:hover img {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+}
+
+.hovereffect h2, .hovereffect p {
+  color: #FFF;
+  text-align: center;
+  position: relative;
+  top: 50px;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+}
+
+.hovereffect:hover h2, .hovereffect:hover p{
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
 
 #footer {
   bottom: 0;
