--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+/* Smaller than standard 960 (devices and browsers) */
+@media only screen and (max-width: 959px) {}
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {}
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {}
+
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-family: "Nunito", sans-serif;
+  font-family: "Nunito", Arial, Verdana, sans-serif;
   background-color: white;
 }
 
@@ -19,43 +34,36 @@
   color: #5FD292;
 }
 
-#header {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  font-family: "Nunito", sans-serif;
-  text-align: center;
-  color: #263238;
-}
-
 #about {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-family: "Nunito", sans-serif;
+  font-family: "Nunito", Arial, Verdana, sans-serif;
   color: #263238;
+}
+
+#contact {
+  font-family: "Open Sans", Arial, Verdana, sans-serif;
 }
 
 h1 {
+  font-size: 24px;
   font-weight: 800;
+  font-family: "Nunito", Arial, Verdana, sans-serif;
 }
 
 h2 {
-  font-size: 28px;
+  font-size: 22px;
+  font-family: "Nunito", Arial, Verdana, sans-serif;
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 18px;
+  font-family: "Nunito", Arial, Verdana, sans-serif;
 }
 
 p {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", Arial, Verdana, sans-serif;
   font-size: 16px;
-}
-
-#filter {
-  font-family: "Nunito", sans-serif;
-  font-size: 16px;
-  text-align: center;
-  color: #263238;
 }
 
 .nav-pills .nav-link.active { background-color: #FBE6F0; color: #F26BAA; }
@@ -66,9 +74,35 @@ p {
   justify-content: space-between;
 }
 
+#contact{
+    padding: 5px 15px;
+}
+
 #image-preview {
-  width: 420px;
-  height: 270px;
+  width: 425px;
+  height: 245px;
+}
+
+.tales {
+  width: 100%;
+}
+
+.carousel-inner{
+  width: 50%;
+  margin: auto;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  background-image: none;
+}
+
+.item img {
+  width:100%
 }
 
 .hovereffect {
@@ -128,12 +162,31 @@ p {
 
 #footer {
   bottom: 0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
   font-family: "Open Sans", sans-serif;
   background-color: #5FD292;
   color: white;
 }
 
+.btn {
+  font-family: "Nunito", Arial, Verdana, sans-serif;
+  outline: none;
+  border-radius: 50px;
+  padding: 8px;
+  background-color: #FBE6F0;
+  color: #F26BAA;
+  min-height: 40px;
+  min-width: 88.28px;
+}
+
+.btn:hover {
+  color: white;
+  background: #F12B81;
+}
+
 .bi:hover {
-  color: #eee;
+  color: #F12B81;
 }
